# tensorcircuit-ng

./: .all-contributorsrc  .dockerignore  .gitignore  .pylintrc  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  NOTICE  README.md  README_cn.md  Untitled.ipynb  benchmark_output.txt  check_all.sh  debug_gates.py  debug_tensor_ops.py  ledger.json  llm.md  llm_experience.md  mypy.ini  notes_backup.md  notes_corrected.md  occurences.txt  patch_pylint.py  pyproject.toml  result.txt  run_format.sh  setup.py  temp_log.txt  test.ipynb  test_lobpcg.py  test_lobpcg_dim.py  test_lobpcg_heis.py  test_quimb.py  test_quimb_dmrg.py
applications/: bcomplex32_algebra.py  tropical_algebra.py
benchmarks/: benchmark_lattice_kdtree.py
docker/: Dockerfile_v2  README.md
docs/: quantum_conversion_setup.md
examples/: ad_time_evol_advanced.py  analog_rydberg.py  benchmark_cuquantum_vs_tc_vqe.py  benchmark_jax_vs_torch_tfim.py  benchmark_mq_vs_tc_vqe.py  chebyshev_evol.py  circuit_compiler.py  contraction_policy_benchmark.py  cotengra_anneal_benchmark.py  cotengra_setting_bench.py  cotengra_strip_exponent.py  cotengra_visualize_path.py  distributed_interface_amplitude.py  distributed_interface_vqe.py  dmrg_tenpy_integration.py  flax_mnist_hybrid.py  fourier_reuploading.py  grover_hyperedge.py  hamiltonian_building.py  hchainhamiltonian.py  hyperedge_demo.py  hyperedge_partitionfunction.py  index_variance_qnn.py  iqp_circuit_hyperedge.py  krylov_time_evolution.py  lambdify_jax_symbolcircuit.py  lattice_neighbor_benchmark.py  lattice_neighbor_time_compare.py  lennard_jones_optimization.py  lightcone_simplify.py  magic_state_distillation.py  measurement_only_circuit.py  mps_vqe_benchmark.py  multihost_vqe.py  mvp_vqe.py  mvp_vs_expectation.py  nested_vmap_grad.py  new_distributed_interface.py  (+44 more)
(+518 files in other folders)
